<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="75dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    tools:context=".ui.NewBookActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/etAuthorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:layout_gravity="center"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/author"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/etBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_gravity="center"
            android:hint="@string/book"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:layout_gravity="center"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="30"
            android:hint="@string/description"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txvLastUpdated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_updated"
        android:textSize="15sp"
        android:padding="15dp"
        android:layout_marginBottom="5dp"
        android:textColor="#9E9E9E" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:background="@drawable/btn_round"
            android:textColor="@color/black"
            android:layout_width="150dp"
            android:layout_marginEnd="4dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btnSave"
            android:background="@drawable/btn_round"
            android:textColor="@color/black"
            android:layout_width="150dp"
            android:layout_marginStart="4dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"/>
    </LinearLayout>



</LinearLayout>